<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:theme="@style/Theme.PlaylistMaker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style = "@style/SecondBackground"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textSettings"
                style="@style/TitleApp"
                android:text="@string/settings" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_16"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_dark_theme"
                style="@style/TextSettings"
                android:text="@string/dark_theme"
                app:layout_constraintBottom_toTopOf="@+id/text_share_app"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_to_dark_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_12"
                app:layout_constraintBottom_toBottomOf="@id/text_dark_theme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_dark_theme"
                app:thumbTint="?colorAccent"
                app:trackTint="?colorAccent" />

            <TextView
                android:id="@+id/text_share_app"
                style="@style/TextSettings"
                android:text="@string/share_app"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_dark_theme" />

            <ImageView
                android:id="@+id/image_share"
                style="@style/ImageSettingStyle"
                android:contentDescription="@string/share_app"
                android:src="@drawable/ic_share"
                app:layout_constraintBottom_toBottomOf="@id/text_share_app"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_share_app" />

            <TextView
                android:id="@+id/text_support"
                style="@style/TextSettings"
                android:text="@string/write_support"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_share_app" />

            <ImageView
                android:id="@+id/image_support"
                style="@style/ImageSettingStyle"
                android:contentDescription="@string/write_support"
                android:src="@drawable/ic_support"
                app:layout_constraintBottom_toBottomOf="@id/text_support"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_support" />

            <TextView
                android:id="@+id/text_term"
                style="@style/TextSettings"
                android:text="@string/user_term"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_support" />

            <ImageView
                android:id="@+id/image_term"
                style="@style/ImageSettingStyle"
                android:contentDescription="@string/user_term"
                android:src="@drawable/ic_arrow"
                app:layout_constraintBottom_toBottomOf="@id/text_term"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_term" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

