<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent" >

        <RelativeLayout
            android:id="@+id/panel_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            style = "@style/MainBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="@dimen/textSize_22"
                android:paddingLeft="@dimen/margin_16"
                android:gravity="center|left"
                android:text="@string/app_name"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded" />
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_weight="0.8"
            style = "@style/MainBackground"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_16"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/search"
                    style="@style/ButtonMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/search"
                    app:icon="@drawable/ic_search" />

                <Button
                    android:id="@+id/mediatek"
                    style="@style/ButtonMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mediatek"
                    android:textColor="@color/black"
                    app:icon="@drawable/ic_library" />

                <Button
                    android:id="@+id/settings"
                    style="@style/ButtonMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settings"
                    app:icon="@drawable/ic_settings" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>