<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.presentation.fragments.AudioPlayer">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnSecondary">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_16" />


        <ImageView
            android:id="@+id/backButton"
            style="@style/HeadStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cover"
            style="@style/AudioPlayerImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/artwork_top_margin"
            android:layout_marginEnd="@dimen/margin_16"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backButton"
            app:srcCompat="@drawable/ic_track" />

        <TextView
            android:id="@+id/title"
            style="@style/AudioPlayerTrackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/track_title"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/cover" />

        <TextView
            android:id="@+id/artist"
            style="@style/AudioPlayerArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/title" />


        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:background="@null"
            android:src="@drawable/add_button"
            android:text="View13"
            app:layout_constraintBottom_toBottomOf="@+id/playButton"
            app:layout_constraintEnd_toStartOf="@+id/playButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/playButton" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorOnSecondary"
            android:src="@drawable/play_button"
            app:layout_constraintBottom_toTopOf="@+id/progressTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artist" />

        <TextView
            android:id="@+id/progressTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_time"
            app:layout_constraintBottom_toTopOf="@id/durationTextView"
            app:layout_constraintEnd_toEndOf="@id/playButton"
            app:layout_constraintStart_toStartOf="@id/playButton"
            app:layout_constraintTop_toBottomOf="@id/playButton" />

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_24"
            android:background="@null"
            android:src="@drawable/like_button_off"
            app:layout_constraintBottom_toBottomOf="@+id/addButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/playButton"
            app:layout_constraintTop_toTopOf="@id/addButton" />


        <TextView
            android:id="@+id/durationTextView"
            style="@style/AudioPlayerContentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            app:layout_constraintBottom_toTopOf="@+id/albumTextView"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTag="durationTag"
            app:layout_constraintTop_toBottomOf="@id/progressTime" />

        <TextView
            android:id="@+id/albumTextView"
            style="@style/AudioPlayerContentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album"
            app:layout_constraintBottom_toTopOf="@+id/yearTextView"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTag="albumNameTag"
            app:layout_constraintTop_toBottomOf="@id/durationTextView" />

        <TextView
            android:id="@+id/yearTextView"
            style="@style/AudioPlayerContentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            app:layout_constraintBottom_toTopOf="@+id/styleTextView"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTag="yearTag"
            app:layout_constraintTop_toBottomOf="@id/albumTextView" />

        <TextView
            android:id="@+id/styleTextView"
            style="@style/AudioPlayerContentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/style"
            app:layout_constraintBottom_toTopOf="@+id/countryTextView"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTag="styleNameTag"
            app:layout_constraintTop_toBottomOf="@id/yearTextView" />

        <TextView
            android:id="@+id/countryTextView"
            style="@style/AudioPlayerContentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTag="countryNameTag"
            app:layout_constraintTop_toBottomOf="@id/styleTextView" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/textsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_tags="durationTag, styleNameTag, countryNameTag, yearTag, albumNameTag" />


        <TextView
            android:id="@+id/trackTime"
            style="@style/AudioPlayerContentText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/track_time"
            app:layout_constraintBaseline_toBaselineOf="@id/durationTextView"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/textsBarrier" />

        <TextView
            android:id="@+id/albumName"
            style="@style/AudioPlayerContentText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/track_title"
            app:layout_constraintBaseline_toBaselineOf="@id/albumTextView"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/textsBarrier" />

        <TextView
            android:id="@+id/year"
            style="@style/AudioPlayerContentText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/track_title"
            app:layout_constraintBaseline_toBaselineOf="@id/yearTextView"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/textsBarrier" />

        <TextView
            android:id="@+id/styleName"
            style="@style/AudioPlayerContentText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/track_title"
            app:layout_constraintBaseline_toBaselineOf="@id/styleTextView"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/textsBarrier" />

        <TextView
            android:id="@+id/countryName"
            style="@style/AudioPlayerContentText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/track_title"
            app:layout_constraintBaseline_toBaselineOf="@id/countryTextView"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/textsBarrier" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />
    <LinearLayout
        android:id="@+id/playlistsBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bottom_rectangle"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <TextView
            android:id="@+id/addText"
            style="@style/placeHolderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/add" />
        <Button
            android:id="@+id/addPlaylistButton"
            style="@style/placeHolderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/new_list" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/item_playlist_for_player"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>